Revision history for DateTime::Format::Genealogy

0.06
	Handle entries which have the French 'Mai' instead of the English 'May'

0.05	Thu Mar  2 09:55:57 EST 2023
	Some people use 4 letters for months - handle them
	Allow more formats to be parsed when not strict
	Old dates (say < AD100) used to return today's date, now rejected
	Strings of just a year returned empty string instead of undef

0.04	Sat Apr  3 20:53:13 EDT 2021
	Warn rather than die on unparseable date
	Trap unparsable dates

0.03	Fri Jun 12 20:25:09 EDT 2020
	Added the quiet flag
	Added the strict flag and allow long month names if not given

0.02	Wed Mar  4 10:48:52 EST 2020
	Added check for invalid parameter (thanks to MANWAR)
		See https://github.com/nigelhorne/DateTime-Format-Genealogy/pull/1
	Fix calling in class mode
	Added many more sanity tests
	Be more lenient with callers

0.01	Tue Apr 10 17:30:46 EDT 2018
        First release