@@ -46,4 +46,6 @@ DATE: {
 
 	cmp_deeply(DateTime::Format::Genealogy::parse_datetime('12 June 2020'), methods('dmy' => '12-06-2020'));
 	cmp_deeply(DateTime::Format::Genealogy::parse_datetime('21 Mai 1681'), methods('dmy' => '21-05-1681'));
+
+	# cmp_deeply(DateTime::Format::Genealogy::parse_datetime({ date => '1637-10-17', quiet => 1}), methods('dmy' => '17-10-1637'));
 }
