@@ -2,6 +2,7 @@ Revision history for DateTime::Format::Genealogy
 
 0.06
 	Handle entries which have the French 'Mai' instead of the English 'May'
+	Some messages were printed even in quiet mode
 
 0.05	Thu Mar  2 09:55:57 EST 2023
 	Some people use 4 letters for months - handle them
